legacy/code-server-deployment.yaml
# code-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  namespace: student02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - name: code-server
        image: image-registry.openshift-image-registry.svc:5000/devops/code-server-student:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /home/coder
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: code-server-pvc
